--- a/styles/globals.css
+++ b/styles/globals.css
@@ -1,16 +1,56 @@
-html,
-body {
-  padding: 0;
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
+
+@layer base {
+  html {
+    @apply overflow-y-scroll;
+  }
+
+  input[type=number]::-webkit-inner-spin-button,
+  input[type=number]::-webkit-outer-spin-button {
+    -webkit-appearance: none;
+  }
+
+  input[type=number] {
+    -moz-appearance: textfield;
+  }
+
+  #modal {
+    overflow-y: scroll;
+    overflow-x: hidden;
+  }
+  #modal::-webkit-scrollbar {
+    display: none;
+  }
+
+  body {
+   
+  }
+
+  /* width */
+  ::-webkit-scrollbar {
+    
+  }
+
+  /* Track */
+  ::-webkit-scrollbar-track {
+   
+  }
+
+  /* Handle */
+  ::-webkit-scrollbar-thumb {
+    
+  }
+
+  /* Handle on hover */
+  ::-webkit-scrollbar-thumb:hover {
+    
+  }
 }
 
-a {
-  color: inherit;
-  text-decoration: none;
-}
-
-* {
-  box-sizing: border-box;
+/*////////////////////*/
+/* RE-USABLE CLASSES */
+@layer components {
+  
 }
