--- a/styles/globals.css
+++ b/styles/globals.css
@@ -7,12 +7,12 @@
     @apply overflow-y-scroll;
   }
 
-  input[type=number]::-webkit-inner-spin-button,
-  input[type=number]::-webkit-outer-spin-button {
+  input[type="number"]::-webkit-inner-spin-button,
+  input[type="number"]::-webkit-outer-spin-button {
     -webkit-appearance: none;
   }
 
-  input[type=number] {
+  input[type="number"] {
     -moz-appearance: textfield;
   }
 
@@ -25,32 +25,26 @@
   }
 
   body {
-   
   }
 
   /* width */
   ::-webkit-scrollbar {
-    
   }
 
   /* Track */
   ::-webkit-scrollbar-track {
-   
   }
 
   /* Handle */
   ::-webkit-scrollbar-thumb {
-    
   }
 
   /* Handle on hover */
   ::-webkit-scrollbar-thumb:hover {
-    
   }
 }
 
 /*////////////////////*/
 /* RE-USABLE CLASSES */
 @layer components {
-  
 }
